<?xml version="1.0" encoding="UTF-8"?>
<!--
    Licensed under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.eclipse.microprofile</groupId>
        <artifactId>microprofile-parent</artifactId>
        <version>2.8</version>
    </parent>

    <groupId>org.eclipse.microprofile.openapi</groupId>
    <artifactId>microprofile-openapi-parent</artifactId>
    <version>4.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>MicroProfile OpenAPI</name>
    <description>Eclipse MicroProfile OpenAPI</description>

    <properties>
        <inceptionYear>2017</inceptionYear>
        <maven.compiler.release>11</maven.compiler.release>
        <osgi-annotation.version>8.1.0</osgi-annotation.version>
        <!-- Versions of TCK dependencies -->
        <rest-assured.version>4.3.0</rest-assured.version>
        <java-hamcrest.version>2.0.0.0</java-hamcrest.version>
        <httpclient.version>4.5.2</httpclient.version>
        <jackson.version>2.10.1</jackson.version>
        <mp.rest-client-api.version>3.0.1</mp.rest-client-api.version>
        <jakarta.xml.bind-api.version>3.0.1</jakarta.xml.bind-api.version>
        <jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
        <!-- We can use the 3.x TCK BOM even though we use the 2.x parent because we're targetting Java 11 -->
        <version.microprofile.tck.bom>3.2</version.microprofile.tck.bom>
    </properties>

    <developers>
        <developer>
            <name>Arthur De Magalhaes</name>
            <url>https://github.com/arthurdm</url>
            <organization>IBM</organization>
            <organizationUrl>https://www.ibm.com</organizationUrl>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/eclipse/microprofile-open-api</url>
        <connection>scm:git:https://github.com/eclipse/microprofile-open-api.git</connection>
        <developerConnection>scm:git:git@github.com:eclipse/microprofile-open-api.git</developerConnection>
        <tag>3.1-SNAPSHOT</tag>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/eclipse/microprofile-open-api/issues</url>
    </issueManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.osgi</groupId>
                <artifactId>osgi.annotation</artifactId>
                <version>${osgi-annotation.version}</version>
                <scope>provided</scope>
            </dependency>
           <dependency>
                <groupId>org.eclipse.microprofile.openapi</groupId>
                <artifactId>microprofile-openapi-api</artifactId>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <modules>
        <module>api</module>
        <module>tck</module>
        <module>spec</module>
        <module>spi</module>
    </modules>

    <profiles>
        <profile>
            <id>validate-formatting</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>net.revelc.code.formatter</groupId>
                        <artifactId>formatter-maven-plugin</artifactId>
                        <executions>
                            <execution>
                            <goals>
                                <goal>validate</goal>
                            </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
